# swagger-output.json
@@ -14,6 +14,14 @@
     {
       "name": "WorkSpace",
       "description": "工作區相關"
+    },
+    {
+      "name": "Board",
+      "description": "看板相關"
+    },
+    {
+      "name": "Board Tag",
+      "description": "看板標籤相關"
     }
   ],
   "schemes": [
@@ -1111,6 +1119,363 @@
         ]
       }
     },
+    "/board/{bID}/viewSet": {
+      "patch": {
+        "tags": [
+          "Board"
+        ],
+        "summary": "B03-2 修改看板權限",
+        "description": "",
+        "parameters": [
+          {
+            "name": "bID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "parameter_name",
+            "in": "body",
+            "description": "B03-2 修改看板權限 private/public",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "viewSet": {
+                  "type": "string",
+                  "example": "private"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "string",
+                  "example": "true"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "修改成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "欄位輸入錯誤，請重新輸入",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "欄位輸入錯誤，請重新輸入"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "身分驗證不通過",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "系統錯誤",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "系統錯誤，請洽管理員"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/board/{bID}/status": {
+      "patch": {
+        "tags": [
+          "Board"
+        ],
+        "summary": "B03-3 看板封存設定 開啟/關閉",
+        "description": "",
+        "parameters": [
+          {
+            "name": "bID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "parameter_name",
+            "in": "body",
+            "description": "B03-3 看板封存設定 開啟/關閉 open/close",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "open"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "string",
+                  "example": "true"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "修改成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "欄位輸入錯誤，請重新輸入",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "欄位輸入錯誤，請重新輸入"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "身分驗證不通過",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "系統錯誤",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "系統錯誤，請洽管理員"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/board/{bID}/title": {
+      "patch": {
+        "tags": [
+          "Board"
+        ],
+        "summary": "B03-4 修改看板標題",
+        "description": "",
+        "parameters": [
+          {
+            "name": "bID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "parameter_name",
+            "in": "body",
+            "description": "B03-4 修改看板標題",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "修改標題名稱"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "string",
+                  "example": "true"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "修改成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "欄位輸入錯誤，請重新輸入",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "欄位輸入錯誤，請重新輸入"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "身分驗證不通過",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "錯誤訊息"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "系統錯誤",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": false
+                },
+                "message": {
+                  "type": "string",
+                  "example": "系統錯誤，請洽管理員"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/board/{bID}": {
       "get": {
         "tags": [
@@ -1473,9 +1838,9 @@
     "/board/{bID}/tags": {
       "get": {
         "tags": [
-          "Board"
+          "Board Tag"
         ],
-        "summary": "B03-13 取得單一看板的所有標籤",
+        "summary": "B03-13 取得看板的所有標籤",
         "description": "",
         "parameters": [
           {
@@ -1623,9 +1988,9 @@
       },
       "post": {
         "tags": [
-          "Board"
+          "Board Tag"
         ],
-        "summary": "B03-14 單一看板新增標籤",
+        "summary": "B03-14 看板新增標籤",
         "description": "",
         "parameters": [
           {
@@ -1642,7 +2007,7 @@
           {
             "name": "parameter_name",
             "in": "body",
-            "description": "B03-14 單一看板新增標籤",
+            "description": "B03-14 看板新增標籤",
             "schema": {
               "type": "object",
               "properties": {
@@ -1782,9 +2147,9 @@
       },
       "put": {
         "tags": [
-          "Board"
+          "Board Tag"
         ],
-        "summary": "B03-15 單一看板修改標籤",
+        "summary": "B03-15 看板修改標籤",
         "description": "",
         "parameters": [
           {
@@ -1801,7 +2166,7 @@
           {
             "name": "parameter_name",
             "in": "body",
-            "description": "B03-15 單一看板修改標籤",
+            "description": "B03-15 看板修改標籤",
             "schema": {
               "type": "object",
               "properties": {
@@ -1945,9 +2310,9 @@
       },
       "delete": {
         "tags": [
-          "Board"
+          "Board Tag"
         ],
-        "summary": "B03-16 單一看板刪除標籤",
+        "summary": "B03-16 看板刪除標籤",
         "description": "",
         "parameters": [
           {
@@ -1964,7 +2329,7 @@
           {
             "name": "parameter_name",
             "in": "body",
-            "description": "B03-16 單一看板刪除標籤",
+            "description": "B03-16 看板刪除標籤",
             "schema": {
               "type": "object",
               "properties": {
